[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/win_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/candy_paint.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/level_done_1.png" type="Texture" id=3]
[ext_resource path="res://assets/home_button.png" type="Texture" id=4]
[ext_resource path="res://assets/restart_button.png" type="Texture" id=5]
[ext_resource path="res://assets/play_button.png" type="Texture" id=6]
[ext_resource path="res://scenes/home_button.gd" type="Script" id=7]
[ext_resource path="res://scenes/restart_button.gd" type="Script" id=8]
[ext_resource path="res://scenes/continue_button.gd" type="Script" id=9]
[ext_resource path="res://assets/mushroom_painted.png" type="Texture" id=10]
[ext_resource path="res://assets/gold_coin.png" type="Texture" id=11]
[ext_resource path="res://scenes/win.gd" type="Script" id=12]
[ext_resource path="res://assets/level_done_3.png" type="Texture" id=13]
[ext_resource path="res://assets/level_done_2.png" type="Texture" id=14]
[ext_resource path="res://resources/title_font.tres" type="DynamicFont" id=15]

[sub_resource type="AnimatedTexture" id=3]
flags = 4
frames = 4
pause = true
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 3 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 14 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 13 )
frame_3/delay_sec = 0.0

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 2 )

[node name="Win" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 350.0
margin_top = 110.0
margin_right = -350.0
margin_bottom = -110.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 324.0
margin_bottom = 356.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 324.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.745098, 0.156863, 0.215686, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 15 )
text = "Level Complete!"
align = 1

[node name="MushroomTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 61.0
margin_right = 324.0
margin_bottom = 170.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.3
texture = SubResource( 3 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 324.0
margin_bottom = 219.0
custom_constants/margin_right = 30
custom_constants/margin_left = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 30.0
margin_right = 294.0
margin_bottom = 45.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
margin_left = 33.0
margin_right = 83.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
size_flags_stretch_ratio = 0.27
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="MushroomsLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 87.0
margin_right = 231.0
margin_bottom = 45.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.745098, 0.156863, 0.215686, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "12/12 (9/12)"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 223.0
margin_right = 324.0
margin_bottom = 268.0
custom_constants/margin_right = 30
custom_constants/margin_left = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 30.0
margin_right = 294.0
margin_bottom = 45.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2"]
margin_left = 32.0
margin_right = 82.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
size_flags_stretch_ratio = 0.27
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 86.0
margin_right = 232.0
margin_bottom = 45.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.745098, 0.156863, 0.215686, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "1200 (1100)"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 324.0
margin_bottom = 356.0
size_flags_vertical = 3

[node name="HomeButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 105.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
script = ExtResource( 7 )

[node name="RestartButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 109.0
margin_right = 214.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 8 )

[node name="ContinueButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 218.0
margin_right = 324.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5
script = ExtResource( 9 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HomeButton" to="MarginContainer/VBoxContainer/HBoxContainer/HomeButton" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RestartButton" to="MarginContainer/VBoxContainer/HBoxContainer/RestartButton" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ContinueButton" to="MarginContainer/VBoxContainer/HBoxContainer/ContinueButton" method="_on_pressed"]
